<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="24dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="141dp"
            android:layout_height="126dp"
            android:contentDescription="@string/logo_picture"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="73dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/firstNameImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/firstNameImage"
            app:srcCompat="@drawable/person"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp">
        </ImageView>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white">


        <EditText
            android:id="@+id/edit_text_signUpFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstName"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="306dp"
            android:textAlignment="textStart"
            android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/lastNameImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/lastNameImage"
                app:srcCompat="@drawable/person"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp">
            </ImageView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white">


                <EditText
                    android:id="@+id/edit_text_signUpLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/lastName"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="99dp"
                    tools:layout_editor_absoluteY="306dp"
                    android:textAlignment="textStart"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/emailImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/emailImage"
                app:srcCompat="@drawable/mail"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp">
            </ImageView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@color/white">


                <EditText
                    android:id="@+id/edit_text_signUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="10dp"
                    tools:layout_editor_absoluteX="99dp"
                    tools:layout_editor_absoluteY="372dp"
                    android:textAlignment="textStart"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/passwordImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/emailImage"
                app:srcCompat="@drawable/password"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="10dp">
            </ImageView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                app:boxBackgroundColor="@color/white">


                <EditText
                    android:id="@+id/edit_text_signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    tools:layout_editor_absoluteX="99dp"
                    tools:layout_editor_absoluteY="372dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/signUpbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signUp" />


        </TableRow>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>